%% Referencias de código (no se renderizan en el PNG, solo para mantenimiento futuro)
%% Fuente: platform/robot/src/state_machine/core.py (StateMachine, _VALID_TRANSITIONS)
%%         platform/robot/src/state_machine/types.py (los 4 estados)
%% Máquina de alto nivel compartida por Open y Obstacle Challenge.

stateDiagram-v2
    [*] --> BOOT_CHECK
    BOOT_CHECK --> READY: autodiagnóstico correcto
    READY --> RACING: se pulsa el botón de inicio
    RACING --> FINISHED: se completan las 3 vueltas
    FINISHED --> [*]
